--- a/components/layouts/header/style.module.scss
+++ b/components/layouts/header/style.module.scss
@@ -351,6 +351,10 @@
         li {
           a {
             color: color(primary-white);
+
+            &.active{
+              color: color(info-blue);
+            }
           }
         }
         .subMenu {
